--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,4 +1,6 @@
-<h1>{{ product.name }}</h1>
-<p>{{ product.description }}</p>
-<button (click)="order.emit()">Order</button>
-<button (click)="share()">share</button>
+<div *ngIf="product">
+  <h1>{{ product.name }}</h1>
+  <p>{{ product.description }}</p>
+  <button (click)="order.emit()">Order</button>
+  <button (click)="share()">Share</button>
+</div>
